github color change

--- a/_sass/_utilities.scss
+++ b/_sass/_utilities.scss
@@ -211,7 +211,7 @@ body:hover .visually-hidden button {
   .fa-github,
   .fa-github-alt,
   .fa-github-square {
-    color: $github-color;
+    color: white;
   }
 
   .fa-google-plus,
