Revert "fix navbar5"
This reverts commit ebb1ef597ccffc23b0e3e808a6711b96e621a976.

--- a/_sass/_navigation.scss
+++ b/_sass/_navigation.scss
@@ -175,8 +175,7 @@
 .greedy-nav {
   position: relative;
   min-width: 250px;
-  // background: $background-color;
-  background: black;
+  background: $background-color;
 
   a {
     display: block;
