Revert "Changing theme"
This reverts commit 81d0a94d31352205da4893059aeabb51a99df039.

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -16,10 +16,10 @@ body {
   color: $text-color;
   font-family: $global-font-family;
   line-height: 1.5;
-  background-color: #000000;
-  color: #ffffff;
-  // background-color:#ffffff ;
-  // color:#000000 ;
+  // background-color: #000000;
+  // color: #ffffff;
+  background-color:#ffffff ;
+  color:#000000 ;
 
   &.overflow--hidden {
     /* when primary navigation is visible, the content in the background won't scroll */
