--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -5,8 +5,8 @@ html {
   /* sticky footer fix */
   position: relative;
   min-height: 100%;
-  // background-color: #000000;
-  // color: #ffffff;
+  background-color: #000000;
+  color: #ffffff;
 }
 
 body {
