--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -27,6 +27,10 @@ body {
   }
 }
 
+.interactive-bg {
+  background: linear-gradient(to right, #131414, #636363);
+}
+
 h1, h2, h3, h4, h5, h6 {
   margin: 2em 0 0.5em;
   line-height: 1.2;
