change location mark color

--- a/_sass/_utilities.scss
+++ b/_sass/_utilities.scss
@@ -214,6 +214,10 @@ body:hover .visually-hidden button {
     color: white;
   }
 
+  .fa-map-marker {
+    color: white;
+  }
+
   .fa-google-plus,
   .fa-google-plus-square {
     color: $google-plus-color;
