--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -5,7 +5,8 @@ html {
   /* sticky footer fix */
   position: relative;
   min-height: 100%;
-  background-color: #000000;
+  // background-color: #000000;
+  background: linear-gradient(to bottom, #f06, #9f6);
   color: #ffffff;
 }
 
