experience url change

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -5,8 +5,8 @@ html {
   /* sticky footer fix */
   position: relative;
   min-height: 100%;
-  // background-color: #000000;
-  background: linear-gradient(to bottom, #f06, #9f6);
+  background-color: #000000;
+  // background: linear-gradient(to bottom, #f06, #9f6);
   color: #ffffff;
 }
 
@@ -17,10 +17,10 @@ body {
   color: $text-color;
   font-family: $global-font-family;
   line-height: 1.5;
-  // background-color: #000000;
+  background-color: #000000;
   color: #ffffff;
   
-  background: linear-gradient(to bottom, #f06, #9f6);
+  // background: linear-gradient(to bottom, #f06, #9f6);
   // background-color:#ffffff ;
   // color:#000000 ;
 
