--- a/_includes/archive-single-talk.html
+++ b/_includes/archive-single-talk.html
@@ -29,7 +29,7 @@
       {% if post.link %}
         <a href="{{ post.link }}">{{ title }}</a> <a href="{{ base_path }}{{ post.url }}" rel="permalink"><i class="fa fa-link" aria-hidden="true" title="permalink"></i><span class="sr-only">Permalink</span></a>
       {% else %}
-        <a href="{{ base_path }}{{ post.url }}" rel="permalink">{{ title }} - {{ base_path }}{{ post.url }}</a>
+        <a href="{{ base_path }}{{ post.url }}" rel="permalink">{{ title }} - {{ post.p_link }}</a>
       {% endif %}
     </h2>
     {% if post.read_time %}
