--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -28,8 +28,7 @@
 
     <h2 class="archive__item-title" itemprop="headline">
       {% if post.link %}
-        <a >{{ title }}</a> 
-        <!-- <a><i class="fa fa-link" aria-hidden="true" title="permalink"></i><span class="sr-only">Permalink</span></a> -->
+        <a >{{ title }}</a> <a><i class="fa fa-link" aria-hidden="true" title="permalink"></i><span class="sr-only">Permalink</span></a>
       {% else %}
         <a>{{ title }}</a>
       {% endif %}
