gradient mouse over

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,6 +17,9 @@ layout: compress
     {% include masthead.html %}
 
     {{ content }}
+    
+<div id="blob"></div>
+<div id="blur"></div>
 
     <div class="page__footer">
       <footer>
