--- a/_sass/_animations.scss
+++ b/_sass/_animations.scss
@@ -19,3 +19,17 @@
     opacity: 1;
   }
 }
+
+ @keyframes rotate {
+   from {
+     rotate: 0deg;
+   }
+
+   50% {
+     scale: 1 1.5;
+   }
+
+   to {
+     rotate: 360deg;
+   }
+ }
