--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -18,7 +18,8 @@ body {
   line-height: 1.5;
   background-color: #000000;
   color: #ffffff;
-  
+  overflow: hidden;
+
   // background-color:#ffffff ;
   // color:#000000 ;
 
@@ -26,6 +27,28 @@ body {
     /* when primary navigation is visible, the content in the background won't scroll */
     overflow: hidden;
   }
+}
+
+#blob {
+  background-color: white;
+  height: 34vmax;
+  aspect-ratio: 1;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  translate: -50% -50%;
+  border-radius: 50%;
+  background: linear-gradient(to right, aquamarine, mediumpurple);
+  animation: rotate 20s infinite;
+  opacity: 0.8;
+}
+
+#blur {
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  z-index: 2;
+  backdrop-filter: blur(12vmax);
 }
 
 .interactive-bg {
