--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,6 +13,18 @@
 
 <script>
   document.documentElement.className = document.documentElement.className.replace(/\bno-js\b/g, '') + ' js ';
+
+   const blob = document.getElementById("blob");
+
+    window.onpointermove = event => {
+      const { clientX, clientY } = event;
+
+      blob.animate({
+        left: `${clientX}px`,
+        top: `${clientY}px`
+      }, { duration: 3000, fill: "forwards" });
+    }
+
 </script>
 
 <!-- For all browsers -->
