--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,11 +16,13 @@ layout: compress
     {% include browser-upgrade.html %}
     {% include masthead.html %}
 
-    {{ content }}
+   
 
     <div id="blob"></div>
-    <div id="blur"></div>
-    
+    <div id="blur">
+{{ content }}
+    </div>
+
     <div class="page__footer">
       <footer>
         {% include footer/custom.html %}
