--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -9,7 +9,7 @@
                 top: `${clientY}px`
             }, { duration: 3000, fill: "forwards" });
         }
-</script>>
+</script>
 
 {% include analytics.html %}
 {% include /comments-providers/scripts.html %}
