--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,14 +31,7 @@ layout: compress
   <div class="circle"></div>
   <div class="circle"></div>
   <div class="circle"></div>
-  <div class="circle"></div>
-  <div class="circle"></div>
-  <div class="circle"></div>
-  <div class="circle"></div>
-  <div class="circle"></div>
-  <div class="circle"></div>
-  <div class="circle"></div>
-  <div class="circle"></div>
+ 
     
     <div class="page__footer">
       <footer>
@@ -55,28 +48,10 @@ layout: compress
       const circles = document.querySelectorAll(".circle");
 
       const colors = [
-        "#ffb56b",
-        "#fdaf69",
-        "#f89d63",
-        "#f59761",
-        "#ef865e",
-        "#ec805d",
-        "#e36e5c",
-        "#df685c",
-        "#d5585c",
-        "#d1525c",
-        "#c5415d",
-        "#c03b5d",
-        "#b22c5e",
-        "#ac265e",
-        "#9c155f",
-        "#950f5f",
-        "#830060",
-        "#7c0060",
-        "#680060",
-        "#60005f",
-        "#48005f",
-        "#3d005e"
+       "#6f7382", "#767c8d", "#7e8598",
+        "#858fa3", "#8c98ae", "#93a2ba",
+         "#9aacc5",  "#a0b6d1", "#a7c0dc", 
+         "#adcbe8", "#b4d5f3", "#bae0ff"
       ];
 
       circles.forEach(function (circle, index) {
