adding dv projects

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,6 +38,8 @@ layout: compress
 
   <div class="page__footer">
     <footer>
+      <a href="{{ '/projects/dv/' | relative_url }}">Mini Projects</a>
+
       <div class="main-bg">
         <img id="anchor" src="../images/rm.jpg">
         <div id="eyes">
