--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -117,6 +117,15 @@ layout: compress
     });
   });
 
+
+  // uncomment for developement
+  document.addEventListener('contextmenu', event => event.preventDefault());
+  document.addEventListener('keydown', function (event) {
+    if (event.ctrlKey && (event.key === 'u' || event.key === 's' || event.key === 'i' || event.key === 'c')) {
+      event.preventDefault();
+    }
+  });
+
 </script>
 
 </html>
